# otpcr

./: .pylintrc  .readthedocs.yaml  README.rst  pyproject.toml  setup.py
.github/workflows/: bandit.yml
docs/: MANUAL.rst  about.rst  conf.py  evidence.rst  guilty.rst  index.rst  manual.rst  reconsider.rst  request.rst  robots.txt  sitemap.xml  source.rst  writings.rst
docs/_static/: otpcr.css
docs/_templates/: base.rst  class.rst  module.rst
docs/files/: robots.txt  sitemap.xml
extra/: rst.py
files/: MANUAL.rst  about.rst  guilty.rst  index.rst  manual.rst  mbx.py  request.rst  rst.py  source.rst  udp.py  writings.rst
otpcr/: __init__.py  __main__.py  attrs.py  broker.py  cache.py  cfg.py  classes.py  cli.py  client.py  cmd.py  cmds.py  command.py  commands.py  config.py  console.py  decode.py  decoder.py  default.py  dft.py  disk.py  encode.py  encoder.py  err.py  errors.py  event.py  face.py  find.py  fleet.py  flt.py  fnd.py  handle.py  handler.py  help.py  iface.py  ifc.py  irc.py  launch.py  lock.py  locking.py  locks.py  (+34 more)
otpcr/lib/: __init__.py  config.py  decoder.py  default.py  encoder.py  handler.py  iface.py  locks.py  object.py  persist.py  repeats.py  runtime.py  threads.py  utils.py
otpcr/mod/: __init__.py  cmd.py  err.py  flt.py  fnd.py  irc.py  log.py  mod.py  opm.py  req.py  rss.py  rst.py  tdo.py  thr.py  tmr.py  udp.py  upt.py  ver.py
otpcr/modules/: __init__.py  cmd.py  err.py  flt.py  fnd.py  irc.py  log.py  mbx.py  mdl.py  mod.py  opm.py  req.py  rss.py  rst.py  skl.py  slg.py  tdo.py  thr.py  tmr.py  udp.py  upt.py  ver.py  wsd.py
otpcr/run/: __init__.py  broker.py  cli.py  commands.py  console.py  errors.py  event.py  handler.py  help.py  iface.py  locks.py  log.py  main.py  parse.py  persist.py  repeater.py  run.py  thread.py  timer.py  utils.py
otpcr/user/: __init__.py
tests/: __init__.py  feeds.opml  test_attrs.py  test_github.py  test_hackernews.py  test_mixin.py  test_none.py  test_object.py  test_opml.py
