[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "otpcr"
description = "OTP-CR-117/19 Communication Record (CR) 117 of the year 2019 (117/19) to the Office of the Prosecutor (OTP) of the International Criminal Court (ICC)"
version = "9"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/otpcr"
"bugs" = "https://github.com/xobjectz/otpcr/issues"
"source" = "https://github.com/xobjectz/otpcr"

[tool.setuptools]
script-files = [
    'bin/otpcr',
]
packages = [
    'otpcr',
    'otpcr.modules'
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/otpcr" = [
    "README.rst",
    "docs/MANUAL.rst",
    "files/bevestigd.jpg",
    "files/bevestigd.pdf",
    "files/informed.jpg",
    "files/verbatim5.png",
    "files/EM_Ack_OTP-CR-117_19.pdf",
    "files/EM_T07_OTP-CR-117_19_001.pdf",
    "files/EM_T04_OTP-CR-117_19.pdf"
]
