[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otpcr"
description = "The 117 communication record of the year 2019 to the Office of the Prosecutor of the International Criminal Court."
version = "20"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.optional-dependencies]
dev = []


[project.urls]
"home" = "https://pypi.org/project/otpcr"
"bugs" = "https://github.com/xobjectz/otpcr/issues"
"source" = "https://github.com/xobjectz/otpcr"


[tool.setuptools]
script-files = [
    "bin/otpcr",
    "bin/otpcrd"
]
packages = [
   "otpcr",
   "otpcr.modules"
]
zip-safe = true


[tool.setuptools.data-files]
"share/doc/sbn/docs" = [
    "README.rst",
    "docs/about.rst",
    "docs/ack3.png",
    "docs/bevestigd.jpg",
    "docs/bylaw.png",
    "docs/conf.py",
    "docs/ECHAabilify.png",
    "docs/ECHAclozapine.png",
    "docs/ECHAhaldol.png",
    "docs/ECHAzyprexa.png",
    "docs/evidence.rst",
    "docs/genocide.jpg",
    "docs/genocide.png",
    "docs/guilty.rst",
    "docs/index.rst",
    "docs/informed.jpg",
    "docs/kamer2.png",
    "docs/manual.rst",
    "docs/OTP111.png",
    "docs/OTP222.png",
    "docs/request.rst",
    "docs/robots.txt",
    "docs/skull3.png",
    "docs/verbatim7.png",
    "docs/writings.rst"
]

"share/doc/sbn/docs/_static" = [
    "docs/_static/otpcr.css",
]

"share/doc/sbn/docs/pdf" =  [
    "docs/pdf/bevestigd.pdf",
    "docs/pdf/EM_Ack_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T04_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T07_OTP-CR-117_19_001.pdf",
    "docs/pdf/Kamer.pdf",
    "docs/pdf/Rome-Statute.pdf"
]

"share/doc/sbn/docs/_templates" = [
    "docs/_templates/base.rst",
    "docs/_templates/class.rst",
    "docs/_templates/mine.rst",
    "docs/_templates/module.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
    "env*",
    "html*",
    "test*"
]
