[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otpcr"
description = "Office of the Prosecutor's Communication Record 117 of the year 2019."
version = "23"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.optional-dependencies]
dev = []


[project.urls]
"home" = "https://pypi.org/project/otpcr"
"bugs" = "https://github.com/xobjectz/otpcr/issues"
"source" = "https://github.com/xobjectz/otpcr"


[tool.setuptools]
script-files = [
    "bin/otpcr",
]
packages = [
   "otpcr",
   "otpcr.modules",
   "otpcr.user"
]
zip-safe = true


[tool.setuptools.data-files]
"share/doc/otpcr/docs" = [
    "README.rst",
    "docs/about.rst",
    "docs/ack3.png",
    "docs/bevestigd.jpg",
    "docs/bylaw.png",
    "docs/conf.py",
    "docs/ECHAabilify.png",
    "docs/ECHAclozapine.png",
    "docs/ECHAhaldol.png",
    "docs/ECHAzyprexa.png",
    "docs/evidence.rst",
    "docs/genocide.jpg",
    "docs/genocide.png",
    "docs/genocideblack.png",
    "docs/guilty.rst",
    "docs/index.rst",
    "docs/informed.jpg",
    "docs/kamer2.png",
    "docs/manual.rst",
    "docs/OTP111.png",
    "docs/OTP222.png",
    "docs/reconsider.rst",
    "docs/request.rst",
    "docs/robots.txt",
    "docs/since.png",
    "docs/skull3.png",
    "docs/verbatim7.png",
    "docs/writings.rst"
]

"share/doc/otpcr/docs/_static" = [
    "docs/_static/otpcr.css",
]

"share/doc/otpcr/docs/pdf" =  [
    "docs/pdf/bevestigd.pdf",
    "docs/pdf/EM_Ack_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T04_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T07_OTP-CR-117_19_001.pdf",
    "docs/pdf/Kamer.pdf",
    "docs/pdf/Rome-Statute.pdf"
]

"share/doc/otpcr/docs/_templates" = [
    "docs/_templates/base.rst",
    "docs/_templates/class.rst",
    "docs/_templates/mine.rst",
    "docs/_templates/module.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
    "env*",
    "html*",
    "test*"
]
